log
Thu 11 May 2023 03:16:55 PM UTC: 
 tests:  0|4
total_score: 0/70
b3d82b2
Thu 11 May 2023 03:22:44 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
0261cf1
Thu 11 May 2023 03:26:13 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:29: error: ‘data’ undeclared (first use in this function)
   22 |   return pq -> heapArray[0],data;
      |                             ^~~~
heap.c:22:29: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:28: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   22 |   return pq -> heapArray[0],data;
      |                            ^
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e1ff11
Thu 11 May 2023 03:26:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
21a85e1
Thu 11 May 2023 03:26:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
fce4253
Thu 11 May 2023 03:27:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cf3b707
Thu 11 May 2023 03:38:03 PM UTC: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:35: error: expected expression before ‘[’ token
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                                   ^
heap.c:35:21: error: called object is not a function or function pointer
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                     ^~
heap.c:37:16: error: expected ‘;’ before ‘}’ token
   37 |     i = (i - 1)
      |                ^
      |                ;
   38 | 
   39 |   }
      |   ~             
Compilation failed
92d3005
